Much love from Jens x I have a feeling this is not the dependency way, also i think my last step is the wrong one.

--- a/templates/master/index.html.twig
+++ b/templates/master/index.html.twig
@@ -13,6 +13,13 @@
             <legend>Your TextInput</legend>
             <label for="text"> First name: </label>
             <input  id="text" type="text" name="text" placeholder="Text Input" required>
+            <label for=dropdown" >
+                <select  id="dropdown"  name="type">
+                    <option value="spaceToDashes">Space to Dashes</option>
+                    <option value="UpperLower">Upper & Lower</option>
+                </select>
+            </label>
+
             <input type="submit" value="Send">
         </fieldset>
     </form>
